I have now begun seq alignment, max a post, max liklihood, and least squares

--- a/22_11_13-hh-maximum_liklihood_expectation.ipynb
+++ b/22_11_13-hh-maximum_liklihood_expectation.ipynb
@@ -12,6 +12,7 @@
     "\n",
     "## Defining what we are doing\n",
     "- Probabalistic loss function\n",
+    "The idea behind MLE is to define a function of the parameters that enables us to fit a the data well. A sensible choice that reflexts these desires is to focus on the liklihood function. When considing data represented by a random variable $x$ and for a familly of probabilities parametrised by $\\theta$ the negative log liklihood is $-logp(x|\\theta)$\n",
     "\n",
     "## Analytical optimisation\n",
     "- Closed form solution\n",
@@ -25,12 +26,14 @@
    "id": "486736b8",
    "metadata": {},
    "source": [
-    "## MLE Examples"
+    "## MLE Examples\n",
+    "\n",
+    "Simple MLE estimating parameters of a distribution using minimize."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "id": "a554463a",
    "metadata": {},
    "outputs": [
@@ -38,8 +41,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Real mean: 0.2, Pred mu: 0.21071905241246158\n",
-      "Real sigma: 0.1, Pred mu: 0.1111008325218695\n"
+      "Real mean: 2, Pred mu: 2.4427435835938085\n",
+      "Real sigma: 5, Pred mu: 4.960710141257992\n"
      ]
     }
    ],
@@ -52,23 +55,20 @@
     "\n",
     "\n",
     "# Set up parameters to generate data\n",
-    "mu = 0.2\n",
-    "sigma = .1\n",
+    "mu = 2\n",
+    "sigma = 5\n",
     "N = 100\n",
     "\n",
     "# Generate some data\n",
     "X = np.random.normal(mu, sigma ,N)\n",
-    "mu_test = np.linspace(-10,10,10)\n",
+    "loc = np.linspace(-10,10,100)\n",
     "\n",
     "# Define initial guess (prior)\n",
     "g_mu = 0\n",
     "g_sigma = 1\n",
     "\n",
     "# Build our prior distribution\n",
-    "g_prior = norm.pdf(mu_test, g_mu, g_sigma)\n",
-    "\n",
-    "# Build figure to \n",
-    "px.line(x=mu_test, y=g_prior)\n",
+    "g_prior = norm.pdf(loc, g_mu, g_sigma)\n",
     "\n",
     "# Define the maximum liklihood expectation.\n",
     "def MLE(params, X):\n",
@@ -77,9 +77,11 @@
     "    neg_LL = -1*LL\n",
     "    return neg_LL\n",
     "\n",
-    "# Using minimise module\n",
+    "# Minimise the neg log liklihood\n",
     "mle_model = minimize(MLE, np.array([0,1]), args=(X), method='L-BFGS-B')\n",
     "[pred_mu, pred_sigma] = mle_model.x\n",
+    "\n",
+    "# Print results\n",
     "print(f\"Real mean: {mu}, Pred mu: {pred_mu}\")\n",
     "print(f\"Real sigma: {sigma}, Pred mu: {pred_sigma}\")\n"
    ]
