Adding Residual vs leverage plot

--- a/22_11_29-hh-interpreting_diagnositic_plots.ipynb
+++ b/22_11_29-hh-interpreting_diagnositic_plots.ipynb
@@ -36,7 +36,26 @@
     "\n",
     "ToDo: Show examples heteroscedatic models and non-heteroscedastic model and then show corresponding q-q plot.\n",
     "\n",
-    "Diagnostic plots are useful because they can help identify potential problems with a dataset or model. By visually inspecting diagnostic plots, data scientists can quickly identify outliers, assess the normality of a dataset, detect heteroscedasticity, and assess the linearity of a regression model. This can help inform decisions about data pre-processing and model selection."
+    "Diagnostic plots are useful because they can help identify potential problems with a dataset or model. By visually inspecting diagnostic plots, data scientists can quickly identify outliers, assess the normality of a dataset, detect heteroscedasticity, and assess the linearity of a regression model. This can help inform decisions about data pre-processing and model selection.\n",
+    "\n",
+    "\n",
+    "## Residual vs Leverage\n",
+    "A residuals versus leverage plot is a diagnostic plot used to detect outliers in a dataset. It shows the standardized residuals (the difference between the observed values and the predicted values) on the vertical axis and the leverage (a measure of how far an observation is from the average) on the horizontal axis. Points that have high leverage or large residuals are potential outliers.\n",
+    "\n",
+    "![residual vs leverage](./figures/22_11_29-hh-residual_vs_leverage.png)\n",
+    "\n",
+    "ToDo: Show example where we have a major outlier and it's effect on the residual vs leverage plot. Also show effect of point on the line of best fit.\n",
+    "\n",
+    "\n",
+    "## Additional notes on interpreting plots.\n",
+    "When interpreting diagnostic plots, it is important to understand what each plot is showing and what potential problems it can reveal. It is also important to keep an open mind and not jump to conclusions too quickly. If a plot shows evidence of potential problems, it is important to investigate the issue further before making any decisions. Finally, it is important to look at all of the diagnostic plots before drawing any conclusions.\n",
+    "\n",
+    "This means one should:\n",
+    "1. Identify problematic points of shapes from each plot and note these down.\n",
+    "2. Identify which problematic dynamics appear to reoccur accross the plots.\n",
+    "3. Hypothesise about potential causes of the problems.\n",
+    "4. Postulate means of fixing the problems, this could be alternative models or testing and removal of outliers.\n",
+    "5. Draw balanced conclusions about the viability of modelling the data."
    ]
   },
   {
